fix transitions for ProjectDisplayCard
made it so that project details pargraph transitions in without adding a second scrollbar.

--- a/debdevs-portfolio/components/UI/molecules/ProjectDisplayCard/ProjectDisplayCard.module.css
+++ b/debdevs-portfolio/components/UI/molecules/ProjectDisplayCard/ProjectDisplayCard.module.css
@@ -76,7 +76,9 @@
   
   
   }
-  
+  .portfolio_card_container{
+    overflow:hidden;
+  }
   .right_image_container {
     width: 292px;
   height: 109px;
@@ -93,7 +95,11 @@
     object-fit:cover;
     width:100%;
     }
-  
+    .paragraph_container{
+      width:100%;
+      height: 231px;
+      overflow-y:hidden;
+    }
   .project_description{
     margin-top:75px;
     font-family: 'Literata';
@@ -103,8 +109,9 @@
     line-height: 24px;
     text-align: center;
     width:100%;
-    height: 231px;
+    height:100%;
     color: #4C6371;  
+    overflow:hidden;
   }
   .project_buttons{
   
